<resources>
    <string name="app_name">Brdplay</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_matches">Matches</string>
    <string name="title_groups">Groups</string>
    <string name="title_profile">Profile</string>
    <string name="new_game">New Game</string>
    <string name="new_group">New Group</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="group_name">Group Name</string>
    <string name="group_members">Members</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign out</string>
    <string name="owner_phrase">By %s</string>
    <string name="more">More</string>
    <string name="playing"><b>Playing at %s</b></string>
    <string name="users_playing"><b>Users Playing</b></string>
    <string name="join_call">Join call</string>
    <string name="open_map">Open map</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="join_match">Join match?</string>
    <string name="type_members_username">Type username of the members</string>
    <string name="edit_profile">Edit profile</string>
    <string name="game_name">Game name</string>
    <string name="match_url">Match call URL</string>
    <string name="game_location">Game address location</string>
    <string name="group">Group</string>
    <string name="hour_format">%02d:%02d</string>
    <string name="date_format">%02d/%02d/%04d</string>
    <string name="match_private">Is match private?</string>
    <string name="match_online">Is match online?</string>
>>>>>>> Stashed changes
</resources>