<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.brdplay.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.brdplay.ui.matches.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.example.brdplay.ui.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.brdplay.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>