<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/is_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_online"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_name"/>

    <Switch
        android:id="@+id/online_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/is_online"
        app:layout_constraintStart_toEndOf="@id/is_online" />

    <EditText
        android:id="@+id/game_loc_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/match_url"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/is_online"/>

    <TextView
        android:id="@+id/is_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_private"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_loc_info"/>

    <Switch
        android:id="@+id/private_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/is_private"
        app:layout_constraintStart_toEndOf="@id/is_private" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/is_private"/>

    <EditText
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <ImageButton
        android:id="@+id/date_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_calendar_today_24"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_name"/>

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/date_picker_btn"
        app:layout_constraintTop_toTopOf="@id/date_picker_btn"
        app:layout_constraintBottom_toBottomOf="@id/date_picker_btn"/>

    <ImageButton
        android:id="@+id/time_picker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_access_time_24"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/date_text_view"
        app:layout_constraintTop_toTopOf="@id/date_picker_btn"/>

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/time_picker_btn"
        app:layout_constraintTop_toTopOf="@id/date_picker_btn"
        app:layout_constraintBottom_toBottomOf="@id/time_picker_btn"/>

    <Button
        android:id="@+id/create_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_picker_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>