<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing"
        android:textSize="30sp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/game_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/playing">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/game_color_bar"
                android:background="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@id/game_color_bar"
                app:layout_constraintStart_toStartOf="parent"/>
            <Button
                android:id="@+id/expand_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:tint="@color/white"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game_color_bar"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/match_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_card"/>
    <TextView
        android:id="@+id/players_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_playing"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_action_button"/>
    <ListView
        android:id="@+id/match_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/players_text_view"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
